[package]
name = "rpow-miner"
version = "0.1.0"
edition = "2021"
description = "Native SHA-256 trailing-zero-bits PoW miner for rpow2.com"
publish = false

[[bin]]
name = "rpow-miner"
path = "src/main.rs"

[dependencies]
# Pure-Rust SHA-256 with runtime SHA-NI/AVX2 detection.
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
